--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
       <div class="flex-col">
         <h2>Puedes seguirme en...</h2>
         <div class="flex-row margin-1">
-          <img src="imagenes/Redes/IG.png" alt="icono2">
-          <img src="imagenes/Redes/behance.png" alt="icono">
-          <img src="imagenes/Redes/linkedin.png" alt="icono3">
+          <img src="imagenes/Redes/IG.png" alt="Ig">
+          <img src="imagenes/Redes/behance.png" alt="Behance">
+          <img src="imagenes/Redes/linkedin.png" alt="Linkedin">
         </div>
       </div>
     </div>
