--- a/index.html
+++ b/index.html
@@ -33,31 +33,40 @@
   </section>
 
   <section class="skills" id="skills">
-    <h2>Skills</h2>
-    <ul>
-      <li>Branding - identidad visual</li>
-      <li>Diseño de medios</li>
-      <li>Diseño Ux/Ui</li>
-      <li>Diseño para RRSS</li>
-      <li>Producción audiovisual</li>
-    </ul>
+    <div class="skills-div">
+      <div class="skills-text">
+        <h2>Skills</h2>
+        <ul>
+          <li>Branding - identidad visual</li>
+          <li>Diseño de medios</li>
+          <li>Diseño Ux/Ui</li>
+          <li>Diseño para RRSS</li>
+          <li>Producción audiovisual</li>
+        </ul>
+      </div>
+      <div class="imagen-skills" id="imagen-skills">
+        <img src="imagenes/Mesa de trabajo 3.png" alt="">
+      </div>
+    </div>
   </section>
 
   <section id="software-skills" class="software-skills">
-    <h2>Software skills</h2>
-    <div>
-    <img src="imagenes/software/photoshop.png" alt="">
-    <img src="imagenes/software/illustrator.png" alt="">
-    <img src="imagenes/software/indesing.png" alt="">
-    <img src="imagenes/software/premiere.png" alt="">
-    <img src="imagenes/software/After Efects.png" alt="">
-    <img src="imagenes/software/Audition.png" alt="">
-    <img src="imagenes/software/figma.png" alt="">
-    <img src="imagenes/software/blender.png" alt="">
-    <img src="imagenes/software/reaper.png" alt="">
-    <img src="imagenes/software/html5.png" alt="">
-    <img src="imagenes/software/css3.png" alt="">
-    <img src="imagenes/software/javascript.png" alt="">
+    <div class="software-text" >
+      <h2>Software skills</h2>
+    </div>  
+    <div class="software-imagen">
+      <img src="imagenes/software/photoshop.png" alt="">
+      <img src="imagenes/software/illustrator.png" alt="">
+      <img src="imagenes/software/indesing.png" alt="">
+      <img src="imagenes/software/premiere.png" alt="">
+      <img src="imagenes/software/After Efects.png" alt="">
+      <img src="imagenes/software/Audition.png" alt="">
+      <img src="imagenes/software/figma.png" alt="">
+      <img src="imagenes/software/blender.png" alt="">
+      <img src="imagenes/software/reaper.png" alt="">
+      <img src="imagenes/software/html5.png" alt="">
+      <img src="imagenes/software/css3.png" alt="">
+      <img src="imagenes/software/javascript.png" alt="">
     </div>
   </section>
 
@@ -78,10 +87,10 @@
 
   <section id="proyectos">
     <div class="background-carousel">
-      <img src="imagenes/Proyectos/Caldero verde.jpg" alt="Imagen 1">
-      <img src="imagenes/Proyectos/Exporgrafica.jpg" alt="Imagen 2">
-      <img src="imagenes/Proyectos/Servihogar.jpg" alt="Imagen 3">
-      <img src="imagenes/Proyectos/Coffe.jpg" alt="Imagen 4">
+      <img src="imagenes/Slide/Caldero verde.jpg" alt="Imagen 1">
+      <img src="imagenes/Slide/Exporgrafica.jpg" alt="Imagen 2">
+      <img src="imagenes/Slide/Servihogar.jpg" alt="Imagen 3">
+      <img src="imagenes/Slide/Coffe.jpg" alt="Imagen 4">
     </div>
     <div class="overlay-content">
       <div class="content-text">
@@ -89,7 +98,7 @@
         <p>Si quieres conocer más sobre mis trabajos y proyectos realizados, puedes entrar a mi sección
         de proyectos, donde encontraras desde piezas gráficas
         hasta desarrollos multimedia.</p>
-        <a href="views/proyectos.html">Mis proyectos</a>
+        <a href="proyectos.html">Mis proyectos</a>
       </div>  
     </div> 
   </section>
@@ -133,18 +142,24 @@
   </section>
   
   <footer class="flex-col align-justify ">
-    <div class=" flex-row footer-content ">
-      <div class="flex-col">
+    <div class="footer">
+      <div>
         <h2>Contactame</h2>
         <p>📧 milenalequio@gmail.com</p>
         <p>📱 1123297218</p>
       </div>
-      <div class="flex-col">
+      <div>
         <h2>Puedes seguirme en...</h2>
-        <div class="flex-row margin-1">
-          <img src="imagenes/Redes/IG.png" alt="Ig">
-          <img src="imagenes/Redes/behance.png" alt="Behance">
-          <img src="imagenes/Redes/linkedin.png" alt="Linkedin">
+        <div class="imagenes-footer">
+          <a href="https://www.instagram.com/by_milenalequio?igsh=dnVrNHdidnpnZnRz">
+            <img src="imagenes/Redes/IG.png" alt="Ig">
+          </a>
+          <a href="https://www.behance.net/milenalequio">
+            <img src="imagenes/Redes/Behance.png" alt="Behance">
+          </a>
+          <a href="https://www.linkedin.com/in/milena-lequio-149865180/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+            <img src="imagenes/Redes/Linkedin.png" alt="Linkedin">
+          </a>
         </div>
       </div>
     </div>
