--- a/index.html
+++ b/index.html
@@ -53,20 +53,22 @@
   <section id="software-skills" class="software-skills">
     <div class="software-text" >
       <h2>Software skills</h2>
-    </div>  
-    <div class="software-imagen">
-      <img src="imagenes/software/photoshop.png" alt="">
-      <img src="imagenes/software/illustrator.png" alt="">
-      <img src="imagenes/software/indesing.png" alt="">
-      <img src="imagenes/software/premiere.png" alt="">
-      <img src="imagenes/software/After Efects.png" alt="">
-      <img src="imagenes/software/Audition.png" alt="">
-      <img src="imagenes/software/figma.png" alt="">
-      <img src="imagenes/software/blender.png" alt="">
-      <img src="imagenes/software/reaper.png" alt="">
-      <img src="imagenes/software/html5.png" alt="">
-      <img src="imagenes/software/css3.png" alt="">
-      <img src="imagenes/software/javascript.png" alt="">
+    </div>
+    <div class="software-center">
+      <div class="software-imagen">
+        <img src="imagenes/software/photoshop.png" alt="">
+        <img src="imagenes/software/illustrator.png" alt="">
+        <img src="imagenes/software/indesing.png" alt="">
+        <img src="imagenes/software/premiere.png" alt="">
+        <img src="imagenes/software/After Efects.png" alt="">
+        <img src="imagenes/software/Audition.png" alt="">
+        <img src="imagenes/software/figma.png" alt="">
+        <img src="imagenes/software/blender.png" alt="">
+        <img src="imagenes/software/reaper.png" alt="">
+        <img src="imagenes/software/html5.png" alt="">
+        <img src="imagenes/software/css3.png" alt="">
+        <img src="imagenes/software/javascript.png" alt="">
+      </div>
     </div>
   </section>
 
@@ -75,12 +77,19 @@
     <div class="educacion-img">
       <div class="educacion-img-contenedor">
         <img src="imagenes/Educacion/alberdi.png" alt="" >
+        <div class="overlay-texto">Bachiller en <br>
+          comunición social - Colegio Juan B. Alberdi</div>
       </div>
       <div class="educacion-img-contenedor">
         <img src="imagenes/Educacion/ISEC.jpg" alt="">
+        <div class="overlay-texto">Tecnicatura en <br>
+          diseño multimedial - Isec</div>
       </div>
       <div class="educacion-img-contenedor">
        <img src="imagenes/Educacion/password.jpg" alt="">
+       <div class="overlay-texto">Curso de diseño <br>
+        gráfico -
+        Instituto Password</div>
        </div>
     </div>
   </section>
