--- a/proyectos.html
+++ b/proyectos.html
@@ -21,73 +21,79 @@
       <div class="sobre-mi-texto">
         <h2>Sobre mís proyectos</h2>
         <p>
-          Soy Milena Lequio, diseñadora multimedial especializada en el
-          desarrollo de identidades visuales, diseño UI/UX, branding y
-          producción multimedia. <br />
-          Siempre busco la mejor manera de comunicar y dar vida a cada proyecto.
-          Creo que cada proyecto es una oportunidad para contar una historia, y
-          mi objetivo es hacer que esa historia se vea y se sienta de la mejor
-          manera posible. <br />
-          Por eso, si tenés un proyecto en mente, ¡me encantaría ayudarte a
-          hacerlo realidad!
+          A lo largo de mi recorrido profesional y académico, he desarrollado una variedad de proyectos
+          que reflejan mi enfoque creativo, mi capacidad para resolver problemas y mi pasión por el diseño.
+          Cada uno de ellos representa un desafío distinto y una oportunidad para aprender, experimentar y crecer.
+          Te invito a explorarlos y descubrir cómo convierto ideas en experiencias visuales funcionales y significativas.
         </p>
       </div>
       <div class="sobre-mi-img">
-        <img class="imagen-difuminada" src="/imagenes/Proyecto.png" alt="">
+        <img class="imagen-difuminada" src="/imagenes/Proyecto.png" alt="" >
       </div>
     </section>
 
     <section class="conteiner-contenido">
-      <h1 class="contenido-titulo">Contenido</h1>
-      <img src="imagenes/Proyectos/Contenidos .png" alt="contenido-caminito " />
+      <div>
+        <h1 class="contenido-titulo">Contenido</h1>
+      </div>
+      <div class="contenido-img">
+        <img src="imagenes/Proyectos/Contenidos .png" alt="contenido-caminito "/>
+        <a class="a-branding" href="#branding">Branding e identidad visual</a>
+        <a class="a-impresos"href="#impresos">Medios impresos</a>
+        <a class="a-ux-ui"href="#ux-ui">Diseño Ux/Ui</a>
+        <a class="a-rrss"href="">Diseño de RRSS</a>
+        <a class="a-audiovisual"href="">Producción audiovisual</a>
+      </div>
     </section>
 
-    <section>
-      <h1>Branding e identidad visual</h1>
-      <div class="">
-        <div class="">
-          <img src="" alt="" />
-        </div>
-        <div class="">
-          <img src="" alt="" />
-        </div>
-        <div class="">
-          <img src="" alt="" />
+    <section id="branding">
+      <h2>Branding e identidad visual</h2>
+      <div class="branding-center">
+        <div class="branding-img">
+          <div class="branding-img-contenedor">
+            <img src="imagenes/Proyectos/Branding/El caldero verde.png" alt="" >
+          </div>
+          <div class="branding-img-contenedor">
+            <img src="imagenes/Proyectos/Branding/Servihogar.png" alt="">
+          </div>
+          <div class="branding-img-contenedor">
+           <img src="imagenes/Proyectos/Branding/Cooking a mix.png" alt="">
+           </div>
         </div>
       </div>
     </section>
 
-    <section>
+    <section id="impresos">
       <h1>Medios Impresos</h1>
       <div class="MediosCarrousel"></div>
     </section>
 
-    <section>
+    <section id="ux-ui">
       <h1>Diseño ux/ui</h1>
       <p>Al hacer click...</p>
       <div class="educacion-img">
         <div class="educacion-img-contenedor">
-          <img src="imagenes/Educacion/alberdi.png" alt="" />
+          <img src="" alt="" width="100"/>
         </div>
         <div class="educacion-img-contenedor">
-          <img src="imagenes/Educacion/ISEC.jpg" alt="" />
+          <img src="" alt="" width="100"/>
         </div>
         <div class="educacion-img-contenedor">
-          <img src="imagenes/Educacion/password.jpg" alt="" />
+          <img src="" alt="" width="100"/>
         </div>
       </div>
       <p>En esta presentacion...</p>
     </section>
 
-    <section>
+    <section id="rrss">
       <h1>Diseño de las RRSS</h1>
       <div>
-        <img src="" alt="" />
-        <img src="" alt="" />
+        <img src="" alt="" width="100"/>
+        <img src="" alt="" width="100"/>
       </div>
     </section>
 
-    <section>
+    <section id="audiovisual">
       <h1>Producción audiovisual</h1>
       <div class="video">
       </div>
@@ -104,9 +110,9 @@
       <div class="flex-col">
         <h2>Puedes seguirme en...</h2>
         <div class="flex-row margin-1">
-          <img src="imagenes/Redes/IG.png" alt="icono2">
-          <img src="imagenes/Redes/behance.png" alt="icono">
-          <img src="imagenes/Redes/linkedin.png" alt="icono3">
+          <img src="imagenes/Redes/IG.png" alt="icono2" width="64">
+          <img src="imagenes/Redes/behance.png" alt="icono" width="64">
+          <img src="imagenes/Redes/linkedin.png" alt="icono3" width="64">
         </div>
       </div>
     </div>
