--- a/proyectos.html
+++ b/proyectos.html
@@ -48,10 +48,11 @@
 
     <section id="branding">
       <h2>Branding e identidad visual</h2>
+
       <div class="branding-center">
-        <div class="branding-img">
+        <div class="branding-img" >
           <div class="branding-img-contenedor">
-            <img src="imagenes/Proyectos/Branding/El caldero verde.png" alt="" >
+           <img src="imagenes/Proyectos/Branding/El caldero verde.png" alt="" class="imagen-boton">
           </div>
           <div class="branding-img-contenedor">
             <img src="imagenes/Proyectos/Branding/Servihogar.png" alt="">
@@ -61,58 +62,90 @@
            </div>
         </div>
       </div>
+
+       <!--posible ventana-->
+        <div hidden>
+          <p>Contenido caldero </p>
+          <img src="" alt="caldero">
+        </div>
+        <div>
+          <p>Servihogar-contenido</p>
+          <img src="" alt="servi">
+        </div>
+        <div>
+          <p>
+            Cooking a mix
+          </p>
+          <img src="" alt="mix">
+        </div>
+      
     </section>
 
     <section id="impresos">
-      <h1>Medios Impresos</h1>
-      <div class="MediosCarrousel"></div>
+      <h2>Medios Impresos</h2>
+      <div class="medioscarrousel">
+        <img src="imagenes/Proyectos/impresos/reyparvis.jpg" alt="Imagen 1">
+        <img src="imagenes/Proyectos/impresos/expografika.jpg" alt="Imagen 2">
+        <img src="imagenes/Proyectos/impresos/bateria.jpg" alt="Imagen 3">
+      </div>
     </section>
 
     <section id="ux-ui">
-      <h1>Diseño ux/ui</h1>
-      <p>Al hacer click...</p>
-      <div class="educacion-img">
-        <div class="educacion-img-contenedor">
-          <img src="" alt="" width="100"/>
-        </div>
-        <div class="educacion-img-contenedor">
-          <img src="" alt="" width="100"/>
-        </div>
-        <div class="educacion-img-contenedor">
-          <img src="" alt="" width="100"/>
+      <h2>Diseño ux/ui</h2>
+      <p>*Al hacer click te llevara a los distintos prototipos realizados en figma</p>
+      <div class="ux-ui-center">
+        <div class="ux-ui-img" >
+          <div class="ux-ui-img-contenedor servihogar">
+          <a href="https://www.figma.com/proto/cBRu7YIMbjHWr8Ofr7SgsG/APP-DE-SERVICIOS--Copy-?node-id=184-634">
+            <img src="imagenes/Proyectos/ux-ui/Servihogar.png" alt="">
+          </a> 
+          </div>
+          <div class="ux-ui-img-contenedor coffeecorner">
+            <a href="https://www.figma.com/proto/GAjYZYKk5ccYa50xu9YGa6/Coffee-Corner?node-id=50-51&starting-point-node-id=50%3A51">
+              <img src="imagenes/Proyectos/ux-ui/CoffeeCorner.png" alt="">
+            </a> 
+          </div>
+          <div class="ux-ui-img-contenedor duckling">
+            <a href="https://www.figma.com/proto/mdCCS1QhcdJsVSrDIrm1FU/Skate-Duckling?node-id=80-17&p=f&t=IDSw42WU8z8MPrht-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=80%3A17">
+              <img src="imagenes/Proyectos/ux-ui/Skate.png" alt="">
+            </a>
+           </div>
         </div>
       </div>
-      <p>En esta presentacion...</p>
+      <p>En esta sección presento una selección de prototipos diseñados en Figma desarrollados. Cada diseño parte de una investigación centrada en el usuario, priorizando la usabilidad, accesibilidad y la claridad visual. 
+        Busque combinar estética funcional con lógica de navegación intuitiva, intentando siempre generar una experiencia digital fluida, eficiente y alineada con los objetivos del producto.</p>
     </section>
 
     <section id="rrss">
-      <h1>Diseño de las RRSS</h1>
-      <div>
-        <img src="" alt="" width="100"/>
-        <img src="" alt="" width="100"/>
-      </div>
+      <h2>Diseño de las RRSS</h2>
     </section>
 
     <section id="audiovisual">
-      <h1>Producción audiovisual</h1>
+      <h2>Producción audiovisual</h2>
       <div class="video">
       </div>
     </section>
   </body>
 
   <footer class="flex-col align-justify ">
-    <div class=" flex-row footer-content ">
-      <div class="flex-col">
+    <div class="footer">
+      <div>
         <h2>Contactame</h2>
         <p>📧 milenalequio@gmail.com</p>
         <p>📱 1123297218</p>
       </div>
-      <div class="flex-col">
+      <div>
         <h2>Puedes seguirme en...</h2>
-        <div class="flex-row margin-1">
-          <img src="imagenes/Redes/IG.png" alt="icono2" width="64">
-          <img src="imagenes/Redes/behance.png" alt="icono" width="64">
-          <img src="imagenes/Redes/linkedin.png" alt="icono3" width="64">
+        <div class="imagenes-footer">
+          <a href="https://www.instagram.com/by_milenalequio?igsh=dnVrNHdidnpnZnRz">
+            <img src="imagenes/Redes/IG.png" alt="Ig">
+          </a>
+          <a href="https://www.behance.net/milenalequio">
+            <img src="imagenes/Redes/Behance.png" alt="Behance">
+          </a>
+          <a href="https://www.linkedin.com/in/milena-lequio-149865180/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+            <img src="imagenes/Redes/Linkedin.png" alt="Linkedin">
+          </a>
         </div>
       </div>
     </div>
