--- a/proyectos.html
+++ b/proyectos.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../proyectos-style.css" />
+    <link rel="stylesheet" href="proyectos-style.css" />
   </head>
   <header>
     <div class="encabezado">
