--- a/proyectos.html
+++ b/proyectos.html
@@ -28,7 +28,7 @@
         </p>
       </div>
       <div class="sobre-mi-img">
-        <img class="imagen-difuminada" src="/imagenes/Proyecto.png" alt="" >
+        <img class="imagen-difuminada" src="imagenes/Proyecto.png" alt="" >
       </div>
     </section>
 
@@ -37,7 +37,7 @@
         <h1 class="contenido-titulo">Contenido</h1>
       </div>
       <div class="contenido-img">
-        <img src="imagenes/Proyectos/Contenidos .png" alt="contenido-caminito "/>
+        <img src="imagenes/Proyectos/Contenidos.png" alt="contenido-caminito "/>
         <a class="a-branding" href="#branding">Branding e identidad visual</a>
         <a class="a-impresos"href="#impresos">Medios impresos</a>
         <a class="a-ux-ui"href="#ux-ui">Diseño Ux/Ui</a>
