--- a/proyectos.html
+++ b/proyectos.html
@@ -17,8 +17,8 @@
     </div>
     </header>
   <body>
-    <section id="sobre-mi" class="sobre-mi">
-      <div class="sobre-mi-texto">
+    <section id="sobre-proyectos" class="sobre-proyectos">
+      <div class="sobre-proyectos-texto">
         <h2>Sobre mís proyectos</h2>
         <p>
           A lo largo de mi recorrido profesional y académico, he desarrollado una variedad de proyectos
@@ -27,7 +27,7 @@
           Te invito a explorarlos y descubrir cómo convierto ideas en experiencias visuales funcionales y significativas.
         </p>
       </div>
-      <div class="sobre-mi-img">
+      <div class="sobre-proyectos-img">
         <img class="imagen-difuminada" src="imagenes/Proyecto.png" alt="" >
       </div>
     </section>
