--- a/proyectos.html
+++ b/proyectos.html
@@ -220,10 +220,10 @@
       </div>
 
       <div id="imagefashion" class="image-containerf" onclick="showButtonsrrss()">
-        <img class="image" src="imagenes/Proyectos/RRSS/Fashion IG 1.png" alt="Imagen 1">
+        <img class="imagefashion" src="imagenes/Proyectos/RRSS/Fashion IG 1.png" alt="Imagen 1">
       </div>
       <div id="imageplants" class="image-containerp" onclick="showButtonsrrss()">
-        <img class="image" src="imagenes/Proyectos/RRSS/Plantas IG 1.png" alt="Imagen 2">
+        <img class="imageplants" src="imagenes/Proyectos/RRSS/Plantas IG 1.png" alt="Imagen 2">
       </div>
 
 
