--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Milena Lequio - Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <header class="encabezado">
@@ -154,8 +155,8 @@
     <div class="footer">
       <div>
         <h2>Contactame</h2>
-        <p>📧 milenalequio@gmail.com</p>
-        <p>📱 1123297218</p>
+        <p><i class="fa-solid fa-envelope"></i> milenalequio@gmail.com</p>
+        <p><i class="fa-solid fa-phone"></i> 1123297218</p>
       </div>
       <div>
         <h2>Puedes seguirme en...</h2>
