--- a/proyectos.html
+++ b/proyectos.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="proyectos-style.css" />
   </head>
   <header>
@@ -31,6 +32,11 @@
         <img class="imagen-difuminada" src="imagenes/Proyecto.png" alt="" >
       </div>
     </section>
+    
+      <a href="index.html" class="sticky-link">
+        <i class="fa-solid fa-house"></i> Volver a Inicio
+      </a>
+
 
     <section class="conteiner-contenido">
       <div>
@@ -192,17 +198,17 @@
       <div class="ux-ui-center">
         <div class="ux-ui-img" >
           <div class="ux-ui-img-contenedor servihogar">
-          <a href="https://www.figma.com/proto/cBRu7YIMbjHWr8Ofr7SgsG/APP-DE-SERVICIOS--Copy-?node-id=184-634">
+          <a href="https://www.figma.com/proto/cBRu7YIMbjHWr8Ofr7SgsG/APP-DE-SERVICIOS--Copy-?node-id=184-634" target="_blank">
             <img src="imagenes/Proyectos/ux-ui/Servihogar.png" alt="">
           </a> 
           </div>
           <div class="ux-ui-img-contenedor coffeecorner">
-            <a href="https://www.figma.com/proto/GAjYZYKk5ccYa50xu9YGa6/Coffee-Corner?node-id=50-51&starting-point-node-id=50%3A51">
+            <a href="https://www.figma.com/proto/GAjYZYKk5ccYa50xu9YGa6/Coffee-Corner?node-id=50-51&starting-point-node-id=50%3A51" target="_blank">
               <img src="imagenes/Proyectos/ux-ui/CoffeeCorner.png" alt="">
             </a> 
           </div>
           <div class="ux-ui-img-contenedor duckling">
-            <a href="https://www.figma.com/proto/mdCCS1QhcdJsVSrDIrm1FU/Skate-Duckling?node-id=80-17&p=f&t=IDSw42WU8z8MPrht-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=80%3A17">
+            <a href="https://www.figma.com/proto/mdCCS1QhcdJsVSrDIrm1FU/Skate-Duckling?node-id=80-17&p=f&t=IDSw42WU8z8MPrht-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=80%3A17" target="_blank">
               <img src="imagenes/Proyectos/ux-ui/Skate.png" alt="">
             </a>
            </div>
@@ -257,8 +263,8 @@
     <div class="footer">
       <div>
         <h2>Contactame</h2>
-        <p>📧 milenalequio@gmail.com</p>
-        <p>📱 1123297218</p>
+        <p><i class="fa-solid fa-envelope"></i> milenalequio@gmail.com</p>
+        <p><i class="fa-solid fa-phone"></i> 1123297218</p>
       </div>
       <div>
         <h2>Puedes seguirme en...</h2>
